--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,14 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
+    "paths": {
+      "my-lib": [
+        "dist/my-lib"
+      ],
+      "mylib": [
+        "dist/mylib"
+      ]
+    },
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
